--- a/project/protostuff.properties
+++ b/project/protostuff.properties
@@ -1,5 +1,5 @@
 modules = proto
 proto.source = src/main/protobuf/message.proto
-proto.output = java_bean
+proto.output = java_bean_model
 proto.outputDir = src/main/java
 proto.options = generate_field_map,generate_helper_methods,builder_pattern
