--- a/project/protostuff.properties
+++ b/project/protostuff.properties
@@ -1,5 +1,16 @@
-modules = proto
-proto.source = src/main/protobuf/message.proto
-proto.output = java_bean_model
-proto.outputDir = src/main/java
-proto.options = generate_field_map,generate_helper_methods,builder_pattern
+modules = wire,rpc,msg
+
+wire.source = src/main/protobuf/wire.proto
+wire.output = java_bean_model
+wire.outputDir = src/main/java
+wire.options = generate_field_map,generate_helper_methods,builder_pattern
+
+rpc.source = src/main/protobuf/rpc.proto
+rpc.output = java_bean_model
+rpc.outputDir = src/main/java
+rpc.options = generate_field_map,generate_helper_methods,builder_pattern
+
+msg.source = src/main/protobuf/msg.proto
+msg.output = java_bean_model
+msg.outputDir = src/main/java
+msg.options = generate_field_map,generate_helper_methods,builder_pattern
