src/main/ruby src/main/protobuf

--- a/project/protostuff.properties
+++ b/project/protostuff.properties
@@ -1,16 +1,16 @@
 modules = wire,rpc,msg
 
-wire.source = pokerno-core/src/main/protobuf/wire.proto
+wire.source = src/main/protobuf/wire.proto
 wire.output = java_bean_model
 wire.outputDir = pokerno-protocol/src/main/java
 wire.options = generate_field_map,generate_helper_methods,builder_pattern
 
-msg.source = pokerno-core/src/main/protobuf/msg.proto
+msg.source = src/main/protobuf/msg.proto
 msg.output = java_bean_model
 msg.outputDir = pokerno-protocol/src/main/java
 msg.options = generate_field_map,generate_helper_methods,builder_pattern
 
-rpc.source = pokerno-core/src/main/protobuf/rpc.proto
+rpc.source = src/main/protobuf/rpc.proto
 rpc.output = java_bean_model
 rpc.outputDir = pokerno-core/src/main/java
 rpc.options = generate_field_map,generate_helper_methods,builder_pattern
