--- a/project/protostuff.properties
+++ b/project/protostuff.properties
@@ -1,4 +1,4 @@
-modules = wire,rpc,msg
+modules = wire,msg,cmd,rpc
 
 wire.source = src/main/protobuf/wire.proto
 wire.output = java_bean_model
@@ -9,6 +9,11 @@ msg.source = src/main/protobuf/msg.proto
 msg.output = java_bean_model
 msg.outputDir = pokerno-protocol/src/main/java
 msg.options = generate_field_map,generate_helper_methods,builder_pattern
+
+cmd.source = src/main/protobuf/cmd.proto
+cmd.output = java_bean_model
+cmd.outputDir = pokerno-rpc/src/main/java
+cmd.options = generate_field_map,generate_helper_methods,builder_pattern
 
 rpc.source = src/main/protobuf/rpc.proto
 rpc.output = java_bean_model
