--- a/etc/database.properties
+++ b/etc/database.properties
@@ -2,3 +2,4 @@ database.driver: org.postgresql.Driver
 database.url: jdbc:postgresql://localhost/poker_development
 database.username: malik
 database.password: ""
+debug: false
